# rag-chat-demo

./: README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 086173993d43_change_vector_size.py  12ab75ca5f74_change_size.py  23b06f3e7ebe_added_tables.py  24daf5188ab8_added_timestamp_columns.py  6ab0ef41156f_updated_constraints.py  7b335015f445_embedding_tied_to_session.py  7d4cd53ed497_added_timestamp_columns.py  7e05109f9a78_document_index.py  91d880609cd2_testing_bugfix.py  af87cac9f1ee_added_session_id.py  c21f4c761e28_doc_index.py  d28141236d7a_role_column.py  dc16c2c218ef_pgvector.py  e652ac1f3e71_start.py
backend/app/: main.py
backend/app/api/v1/: chat_messages.py  chat_sessions.py  message_controller.py  rag_controller.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py  vector.py
backend/app/dependencies/: auth.py
backend/app/middlewares/: index.py  rate_limit.py
backend/app/models/: __init__.py  base_model.py  chat.py  vector.py
backend/app/schemas/: chat.py  rag.py
backend/app/services/: chunking_service.py  message_service.py  rag_service.py
backend/src/: main.py
backend/src/core/: errors.py  rate_limit.py
backend/src/db/: session.py
backend/src/dependencies/: auth.py
backend/src/middlewares/: index.py  rate_limit.py
backend/src/models/: chat.py
backend/src/schemas/: chat.py
backend/tests/: test_auth.py  test_chat_messages.py  test_chat_sessions.py
frontend/: .env  (+5 more)
(+14 files in other folders)
