[tool.poetry]
name = "fastapi-chat-storage"
version = "0.1.0"
description = "A microservice for managing chat sessions and messages using FastAPI and PostgreSQL."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlmodel = "^0.0.6"
asyncpg = "^0.24.0"
pgvector = "^0.1.0"
python-dotenv = "^0.19.0"
loguru = "^0.5.3"
pydantic = "^1.9.0"
alembic = "^1.7.0"
httpx = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
httpx = "^0.21.0"
pytest-asyncio = "^0.16.0"
mypy = "^0.910"
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"